# poruos

./: .gitignore  Cargo.toml  README.md  diesel.toml
.github/workflows/: ci.yml  release.yml
migrations/2024-12-27-150947_create_users/: up.sql
migrations/2024-12-29-022459_create_finance_currency/: down.sql  up.sql
migrations/2024-12-29-022723_create_finance_transaction_category/: down.sql  up.sql
migrations/2024-12-29-102047_create_finance_transaction/: down.sql  up.sql
src/: consts.rs  main.rs  schema.rs
src/api/: mod.rs
src/api/finance/: mod.rs
src/api/finance/currency/: mod.rs  numeric_code.rs  transaction.rs
src/api/http/: mod.rs  response.rs
src/api/http/request/: access.rs
src/api/person/: claim.rs  mod.rs
src/common/: mod.rs
src/model/: mod.rs  person.rs
src/model/finance/: mod.rs
src/model/finance/currency/: mod.rs  numeric_code.rs  transaction.rs
src/model/finance/currency/transaction/: category.rs  mod.rs
src/model/finance/wallet/: deposit.rs  trading.rs
src/schedule/: mod.rs
src/services/: mod.rs  person.rs
src/services/finance/: mod.rs
src/services/finance/currency/: mod.rs  transaction.rs
